[package]
name = "vroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
byteorder = "1"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
futures = "0.3"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
tracing-perfetto = "0.1.5"
tracing = "0.1"
tracing-subscriber = "0.3.19"


[profile.release]
debug = 1
flags = ["-Zsanitizer=address"]


[[bin]]
name = "async_test"
path = "./examples/async_test.rs"
